--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "",
   "main": "./src/index.ts",
   "scripts": {
-    "start": "tsc ./src/index.ts",
     "build": "tsc",
     "test": "tsx ./test/main.ts"
   },
@@ -21,6 +20,7 @@
     "fs-extra": "^11.1.1"
   },
   "devDependencies": {
+    "@types/node": "^20.6.3",
     "live-server": "^1.2.2",
     "semver": "^7.5.4",
     "tsc": "^2.0.4",
