--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "./src/index.ts",
   "scripts": {
     "build": "tsc",
-    "test": "tsx ./test/main.ts"
+    "test:main": "tsx ./test/main.ts",
+    "test:build": "tsx ./test/build.ts"
   },
   "keywords": [
     "electron",
@@ -17,7 +18,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "download": "^8.0.0",
-    "fs-extra": "^11.1.1"
+    "fs-extra": "^11.1.1",
+    "iconv-lite": "^0.6.3"
   },
   "devDependencies": {
     "@types/node": "^20.6.3",
