--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "files-delta-updater",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "Neon",
-  "description": "",
-  "main": "./src/index.ts",
+  "description": "use nodejs to implement local file version updates and only require a file server",
+  "main": "dist/index.ts",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "release": "tsc && npm publish",
     "test:main": "tsx ./test/main.ts",
     "test:build": "tsx ./test/build.ts"
   },
@@ -18,8 +20,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "download": "^8.0.0",
-    "fs-extra": "^11.1.1",
-    "iconv-lite": "^0.6.3"
+    "fs-extra": "^11.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.6.3",
