--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "files-delta-updater",
-  "version": "0.0.9",
+  "version": "0.0.11",
   "author": "Neon",
   "description": "use nodejs to implement local file version updates and only require a file server",
   "main": "dist/index.js",
@@ -18,14 +18,13 @@
     "file"
   ],
   "dependencies": {
-    "axios": "^1.4.0",
-    "download": "^8.0.0",
-    "fs-extra": "^11.1.1"
+    "axios": "1.4.0",
+    "download": "8.0.0",
+    "fs-extra": "9.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.6.3",
     "live-server": "^1.2.2",
-    "semver": "^7.5.4",
     "tsc": "^2.0.4",
     "tsx": "^3.12.10",
     "typescript": "^5.2.2"
