--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "files-delta-updater",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "author": "Neon",
-  "description": "use nodejs to implement local file version updates and only require a file server",
+  "description": "Only use static resource servers to implement differential updates of resources",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -15,7 +15,7 @@
     "electron",
     "delta",
     "update",
-    "file"
+    "nodejs"
   ],
   "dependencies": {
     "axios": "1.4.0",
@@ -33,8 +33,5 @@
     "type": "git",
     "url": "https://github.com/Howlcn1997/files-delta-updater.git"
   },
-  "bugs": {
-    "url": "https://github.com/Howlcn1997/files-delta-updater/issues"
-  },
-  "homepage": "https://github.com/Howlcn1997/files-delta-updater"
+  "homepage": ""
 }
